--- a/nav.html
+++ b/nav.html
@@ -6,6 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li>contact us </li>
+                <li>about us </li>
+                <li>home </li>
+                <li>services </li>
+                <li>blog </li>
+                <li>blog </li>
+         
+
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
